@@ -1,7 +1,7 @@
 #  File src/library/base/R/match.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2016 The R Core Team
+#  Copyright (C) 1995-2018 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -41,8 +41,9 @@ pmatch <- function(x, table, nomatch = NA_integer_, duplicates.ok = FALSE)
 match.arg <- function (arg, choices, several.ok = FALSE)
 {
     if (missing(choices)) {
-	formal.args <- formals(sys.function(sys.parent()))
-	choices <- eval(formal.args[[as.character(substitute(arg))]])
+	formal.args <- formals(sys.function(sysP <- sys.parent()))
+	choices <- eval(formal.args[[as.character(substitute(arg))]],
+			envir = sys.frame(sysP))
     }
     if (is.null(arg)) return(choices[1L])
     else if(!is.character(arg))
